test/bad/classes/constructor05.px

class Test def
    constructor(x: Int) def
        skip
